# perm-post

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
perm_pg/: asgi.py  settings.py  urls.py  wsgi.py
pw_tracker/: apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
pw_tracker/migrations/: 0001_initial.py  0002_auto_20210320_2229.py  0003_auto_20210320_2241.py
