[tool.poetry]
name = "perm-post"
version = "0.1.0"
description = ""
authors = ["Grace Choi <choi.g.330@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
